buildscript {
    repositories {
//        maven { url = "https://maven.minecraftforge.net/" }
        maven {
            name "neoforgedReleases"
            url "https://maven.neoforged.net/releases"
        }
        maven { url "https://plugins.gradle.org/m2/" }
    }
    dependencies {
//        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.69', changing: true
        classpath group: 'net.neoforged.gradle', name: 'userdev', version: '7.1.11'
        classpath group: 'net.neoforged.gradle', name: 'common', version: '7.1.11'
        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.0"
    }
}

apply plugin: 'net.neoforged.gradle.userdev'
apply plugin: 'net.neoforged.gradle.common'
//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'com.github.johnrengelman.shadow'


configurations {
    shade
    implementation.extendsFrom shade
}

java {
    withSourcesJar()
}

repositories {
    mavenCentral()
}

String umcVersion = "1.2.2"
if (!"release".equalsIgnoreCase(System.getProperty("target"))) {
    try {
        umcVersion += "-" + 'git rev-parse --verify --short=7 HEAD'.execute().text.trim()
    } catch (Exception ex) {
        umcVersion += "-unknown"
    }
}
version = "1.21.1-neoforge-" + umcVersion
group = "cam72cam.universalmodcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "UniversalModCore"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

jarJar.enable()

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
        argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        arguments.addAll '--mod', 'universalmodcore', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

accessTransformers {
    file 'src/main/resources/META-INF/accesstransformer.cfg'
}

repositories {
    mavenCentral()
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    implementation "net.neoforged:neoforge:21.1.216"
    // you may put jars on which you depend on in ./libs
    // or you may define them like so..
    //compile "some.group:artifact:version:classifier"
    //compile "some.group:artifact:version"
      
    // real examples
    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env

    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
    // except that these dependencies get remapped to your current MCP mappings
    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // for more info...
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

    //testImplementation ('junit:junit:4.13')
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.2'

//    minecraftLibrary(group: 'org.lz4', name: 'lz4-java', version: '1.8.0')
//    minecraftLibrary(group: 'javax.vecmath', name: 'vecmath', version: '1.5.2')

    implementation(jarJar(group: 'javax.vecmath', name: 'vecmath', version: '[1.5.2,)'){
        version {
            prefer "1.5.2"
        }
    })
    implementation(jarJar(group: 'org.lz4', name: 'lz4-java', version: '[1.8.0,)'){
        version {
            prefer "1.8.0"
        }
    })
}

jar {
    archiveClassifier = 'slim'
    manifest {
        attributes([
            "Specification-Title": "universalmodcore",
            "Specification-Vendor": "",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": umcVersion,
            "Implementation-Vendor" :"",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
        ])
    }
}

tasks.jarJar {
    // main jar = slim + jar-in-jar deps
    archiveClassifier.set("")
    dependsOn tasks.jar
}

tasks.register('jarJarRelease') {
    group = 'jarjar'
    finalizedBy tasks.jarJar
}

tasks.withType(Jar).configureEach {
    if (archiveClassifier.get() == 'all') {
        enabled = false
    }
}

assemble.dependsOn tasks.jarJar

test {
    useJUnit()
    maxHeapSize = '1G'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = archivesBaseName
            from components.java
        }
    }
    repositories {
        maven {
            url "sftp://teamopenindustry.cc:22/var/www/html/maven/"
            credentials {
                username = "mavenci"
                password = System.getenv("MAVENCI_PASS")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.register('showBuildInfo') {
    doLast {
        System.out.println("Build Uploaded to Maven at: ")
        System.out.println("https://teamopenindustry.cc/maven/cam72cam/universalmodcore/UniversalModCore/${version}/UniversalModCore-${version}.jar")
    }
}

publish.finalizedBy showBuildInfo
